Fix unreadable text on the about page

--- a/src/components/Frame/About/_about.scss
+++ b/src/components/Frame/About/_about.scss
@@ -1,5 +1,5 @@
 .about {
   img {
-    opacity: 1;
+    opacity: 0.2;
   }
 }
